--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -10,6 +10,13 @@
   <h1 class="text-2xl font-bold mb-4">Podcast Pulse</h1>
   <input id="url" class="border p-2 rounded w-full max-w-xl" placeholder="Paste YouTube link"/>
   <button id="go" class="mt-3 px-4 py-2 bg-black text-white rounded">Extract Wisdom</button>
+  <p style="margin-top:8px;font-size:14px;color:#555">
+  Demo links: 
+  <a href="?v=qp0HIF3SfI4">Simon Sinek</a> •
+  <a href="?v=5MgBikgcWnY">Josh Kaufman</a>.
+  Note: Some videos block transcripts from cloud servers; the app returns a friendly message.
+</p>
+
   <pre id="out" class="mt-6 bg-gray-100 p-4 rounded max-w-3xl overflow-auto"></pre>
 
 <script>
